--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -39,8 +39,8 @@ ul{
 header{
     background:#3a3119;
     color:#ffffff;
-    padding-top:30px;
-    min-height:70px;
+    padding-top:10px;
+    min-height:60px;
     /* color width style */
     border-bottom:#ff9317 3px solid;
 }
@@ -113,16 +113,17 @@ button {
 }
 
 button:hover {
-    opacity: 0.8;
+    opacity: 1;
 }
 
+/* cancel button for login page */
 .cancelbtn {
     width: auto;
     padding: 10px 18px;
     background-color: #f44336;
 }
 
-/* Extra styles for the cancel button */
+/* Extra styles for the cancel button for signup page */
 #cancelbtn {
     padding: 14px 20px;
     background-color: #f44336;
@@ -139,13 +140,20 @@ button:hover {
     margin: 24px 0 12px 0;
 }
 
+.avatar {
+    text-align: left;
+    vertical-align: middle;
+    width: 40%;
+    border-radius: 50%;
+}
+
 img.avatar {
     width: 40%;
     border-radius: 50%;
 }
 
 .container {
-    padding: 16px;
+    padding: 10px;
 }
 
 span.passwd {
@@ -204,6 +212,46 @@ footer{
     text-align: center;
 }
 
+/* Tabs */
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    display:inline-flex;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    color: black
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
+
 /* Change styles for span and cancel button on extra small screens */
 @media(max-width: 768px){
   header #branding,
@@ -228,7 +276,27 @@ footer{
        float: none;
     }
 
+    .container{
+        width:90%;
+        margin:auto;
+        overflow:hidden;
+    }
+
   .cancelbtn {
         width: 100%;
     }
+
+    #login, #signup{
+        width:80%;
+        margin:auto;
+        overflow:hidden;
+    }
+}
+
+.pull-left{
+    float: left;
+}
+
+.pull-right{
+    float: right;
 }
