--- a/API/templates/index.html
+++ b/API/templates/index.html
@@ -11,36 +11,76 @@
 <body>
     <table>
         <tr>
-            <td>Get Questions</td>
-            <td>https://stack-overflow-lite-11.herokuapp.com/api/v1/questions</td>
+            <td colspan="2">
+                <h1>Available endpoints</h1>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Get Questions
+            </td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions
+                </a>                
+            </td>
         </tr>
         <tr>
             <td>Add Question</td>
-            <td>https://stack-overflow-lite-11.herokuapp.com/api/v1/questions</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions
+                </a>                
+            </td>
         </tr>
         <tr>
             <td>Get Question</td>
-            <td>https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1
+                </a>                
+            </td>
         </tr>
         <tr>
             <td>Add Answer</td>
-            <td>https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/answers</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/answers">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/answers
+                </a>
+            </td>
         </tr>
         <tr>
             <td>Get Answers</td>
-            <td>https://stack-overflow-lite-11.herokuapp.com/api/v1/answers</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/answers">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/answers
+                </a>                
+            </td>
         </tr>
         <tr>
             <td>Add a comment to Question</td>
-            <td>https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/comments</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/comments">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/questions/1/comments
+                </a>                
+            </td>
         </tr>
         <tr>
             <td>Add a comment to an answer</td>
-            <td>https://stack-overflow-lite-11.herokuapp.com/api/v1/answers/1/comments</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/answers/1/comments">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/answers/1/comments
+                </a>                
+            </td>
         </tr>
         <tr>
             <td>Get Comments</td>
-            <td>https://stack-overflow-lite-11.herokuapp.com/api/v1/comments</td>
+            <td>
+                <a href="https://stack-overflow-lite-11.herokuapp.com/api/v1/comments">
+                    https://stack-overflow-lite-11.herokuapp.com/api/v1/comments
+                </a>
+                
+            </td>
         </tr>
     </table>
 </body>
